--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Site with brief information about Pavel Durov.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./base.css">
     <title>Résumé</title>
   </head>
   <body>
