added primary content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,137 @@
     <title>Résumé</title>
   </head>
   <body>
-    ― Hello World! &#x1F609;
+    <main>
+      <article>
+        <div class="page" style="border-color: midnightblue;">
+          <div class="stackable grid">
+            <div class="row">
+              <div class="three wide center aligned column">
+                <div class="avatar-wrapper">
+                  <object class="avatar" data="./assets/images/avatar.jpg" role="img" aria-label="My profile picture"></object>
+                </div>
+              </div>
+              <div class="thirteen wide column">
+                <div class="stackable grid">
+                  <div class="sixteen wide column">
+                    <h1 class="name">Pavel Durov</h1>
+                    <div class="job">Entrepreneur, programmer, dollar billionaire</div>
+                    <ul class="contacts">
+                      <li>
+                        <a href="https://www.facebook.com/durov" rel="author" class="facebook">
+                          <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M448 56.7v398.5c0 13.7-11.1 24.7-24.7 24.7H309.1V306.5h58.2l8.7-67.6h-67v-43.2c0-19.6 5.4-32.9 33.5-32.9h35.8v-60.5c-6.2-.8-27.4-2.7-52.2-2.7-51.6 0-87 31.5-87 89.4v49.9h-58.4v67.6h58.4V480H24.7C11.1 480 0 468.9 0 455.3V56.7C0 43.1 11.1 32 24.7 32h398.5c13.7 0 24.8 11.1 24.8 24.7z"/></svg>
+                          <span>durov</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://t.me/durov" rel="author" class="telegram">
+                          <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                              d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z">
+                            </path>
+                          </svg>
+                          <span>durov</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="sixteen wide mobile only column">
+                    <div class="divider"></div>
+                  </div>
+                  <div class="sixteen wide column">
+                    <p>Programmer and businessman, one of the founders of the VKontakte social network and the company of the same name, the cross-platform Telegram messenger and other projects. The dollar billionaire, whose fortune is estimated at $ 17 billion, is ranked 112th among the world's billionaires according to Forbes magazine. A person who puts at the head of activity not earnings, but the process of creation, which in our time is a huge rarity.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="sixteen wide column">
+                <div class="fat divider"></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="ten wide column">
+                <h3>Biography</h3>
+                <ul class="timeline">
+                  <li>
+                    <p><b>10th October 1984</b></p>
+                    <p>Born in Leningrad, in an intelligent family.</p>
+                  </li>
+                  <li>
+                    <p><b>1995 year</b></p>
+                    <p>First took a great interest in programming</p>
+                  </li>
+                  <li>
+                    <p><b>2001 year</b></p>
+                    <p>Graduated with honors from the Academic Gymnasium</p>
+                  </li>                  
+                  <li>
+                    <p><b>2002 year</b></p>
+                    <p>Entered the Philological Faculty of St. Petersburg State University with a degree in English Philology and Translation</p>
+                  </li>
+                  <li>
+                    <p><b>2006 year</b></p>
+                    <p>Graduated from the university with honors</p>
+                    <p>In the summer, a friend introduced Pavel to facebook, after which Pavel got his first VKontakte concept, called Student.ru.</p>
+                    <p>On October 1, according to official data, the domain vkontakte.ru was registered</p>
+                  </li>
+                  <li>
+                    <p><b>2007 year</b></p>
+                    <p>Vkontakte becomes the third most popular website on the Russian Internet</p>
+                    <p>Durov was recognized as one of the winners in the competition "Best Young Entrepreneurs 2007"</p>
+                  </li>                  
+                  <li>
+                    <p><b>2008 year</b></p>
+                    <p>The network was monetized, and the number of users exceeded 20 million</p>
+                  </li>
+                  <li>
+                    <p><b>2010 year</b></p>
+                    <p>Pavel's company moved into the "Singer" house, which is located on Nevsky Prospekt</p>
+                  </li>
+                  <li>
+                    <p><b>2011 year</b></p>
+                    <p>Durov, with a fortune of 7.9 billion rubles, ranked 350th in the ranking of Russian billionaires</p>
+                    <p>Pavel and the head of the DST Global fund Yuri Milner launched the Start Fellows charity project</p>
+                    <p>The first "appeals" of the FSB</p>
+                    <p>Vkontakte is the first most popular site in Belarus, the second in Russia, the third in Ukraine, the fifth in Kazakhstan, the 26th in the world, [41] which was estimated at $ 1.5 billion</p>
+                  </li>                  
+                  <li>
+                    <p><b>2012 year</b></p>
+                    <p>Donated $ 1 Million to Wikipedia in March</p>
+                    <p>In May, top managers of VKontakte, led by Durov, threw airplanes with 5000-ruble bills attached to them to create a festive atmosphere on City Day</p>
+                    <p>The publishing house "Mann, Ivanov and Ferber" has released the book by Nikolai Kononov "The Durov Code"</p>
+                  </li>
+                  <li>
+                    <p><b>2013 year</b></p>
+                    <p>He entered into a deal to sell the remaining 12% stake in Vkontakte to Ivan Tavrin and ceased to be the owner of the network</p>
+                    <p>First Telegram client introduced in August</p>
+                    <p>Telegram had about 1 million installations in November, according to TJournal.</p>
+                  </li>
+                  <li>
+                    <p><b>2014 year</b></p>
+                    <p>Left abroad with no plans to return back</p>
+                  </li>                  <li>
+                    <p><b>2017 year</b></p>
+                    <p>Moved to Dubai, where he remains to this day</p>
+                  </li>
+                  <li>
+                    <p><b>2018 year</b></p>
+                    <p>Durov announced plans to launch TON blockchain platform with Gram cryptocurrency</p>
+                  </li>
+                  <li>
+                    <p><b>2020 year</b></p>
+                    <p>Due to the ban on the issue of Gram by the US Securities Commission had to abandon TON</p>
+                  </li>
+                  <li>
+                    <p><b>2021 year</b></p>
+                    <p>Meeting with the Prince of Dubai</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
