added secondary content

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="row">
               <div class="ten wide column">
-                <h3>Biography</h3>
+              <h3>Biography</h3>
                 <ul class="timeline">
                   <li>
                     <p><b>10th October 1984</b></p>
@@ -134,6 +134,28 @@
                     <p>Meeting with the Prince of Dubai</p>
                   </li>
                 </ul>
+              </div>
+              <div class="six wide column">
+                <section>
+                  <h3>About opinion.</h3>
+                  <p class="tags small">Only 10% of people have their own opinion. Others simply repeat what they read somewhere ... Remember those times when your opinion was completely contrary to the opinion of others? These are the most precious moments to grasp with a stranglehold. The world around us is evolving so rapidly that conventional wisdom becomes a mockery of common sense before our very eyes. Resistance to noise around is a stable benchmark for everyone who wants to make a significant contribution to the development of mankind. Listening to your inner voice does not mean being deaf to the opinions of others. However, forget about democracy among those around you - the voice of an active thinker who changes the world should be a hundred times more significant for you than the voice of an idle man in the street with his right to opinion. But less important than your own. Your belief in the possibility of a different path is much more important for humanity and for all of us than your ability to adapt and echo the impersonal echo of conformists.</p>
+                </section>
+                <section>
+                  <h3>About money.</h3>
+                  <p class="tags small">For more than 10 years - since the time when I was a very poor student - I never tire of repeating: money is overvalued, because creation is much more interesting than consumption, and the internal state is incommensurably more important than the external. As soon as you make a cult out of money and exchange "to be" for "to appear", you are sending yourself into voluntary slavery. Debts due to status tinsel, boring work with dull cowards, the need to lie and betray your world - these are just part of the price you pay for an excessive desire for paper.</p>
+                </section>
+                <section>
+                  <h3>About the benefits of loneliness.</h3>
+                  <p class="tags small">Communication is overrated. An hour of solitude is more productive than a week of talking.</p>
+                </section>
+                <section>
+                  <h3>About order and chaos.</h3>
+                  <p class="tags small">It is believed that order is always good and chaos is always bad. This is one of those delusions, thanks to which mankind suffered from repression, stagnation and wars for a good half of the 20th century. In fact, at the heart of any creative search, discovery, and innovation is disorder. The new can only be born out of chaos - from the unintended, unexpected inconsistency with the familiar. Of course, in conditions of absolute disorder, this "new" has no opportunity to gain a foothold and be useful; therefore, a balance is needed between chaos and order. But without a bit of chaos, progress stops altogether.</p>
+                </section>
+                <section>
+                  <h3>About competition.</h3>
+                  <p class="tags small">There are two ways to respond to competition. The first is to improve yourself and your project. The second is to try to harm competitors. The first method works for the long term, the second does not. As soon as you shift your focus from self-development to competitors, you allow yourself to fear them. you are unconsciously bringing closer what you fear. Fear is a self-fulfilling prophecy.</p>
+                </section>
               </div>
             </div>
           </div>
